--- a/Paint_Alpha/Paint_Alpha.vcxproj.filters
+++ b/Paint_Alpha/Paint_Alpha.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="Util.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="EllipseTool.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Form1.h">
@@ -150,6 +153,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Util.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="EllipseTool.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
